// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavItem renders 1`] = `
<DocumentFragment>
  <li>
    <a
      class="pages-nav__link"
    >
      translationId
    </a>
  </li>
</DocumentFragment>
`;

exports[`NavItem renders for selected child items 1`] = `
<DocumentFragment>
  <li>
    <a
      class="pages-nav__link  pages-nav__link--child-selected"
    >
      translationId
    </a>
  </li>
</DocumentFragment>
`;

exports[`NavItem renders for selected items 1`] = `
<DocumentFragment>
  <li>
    <a
      class="pages-nav__link pages-nav__link--selected pages-nav__link--child-selected"
    >
      translationId
    </a>
  </li>
</DocumentFragment>
`;
